--- a/main.css
+++ b/main.css
@@ -1,3 +1,27 @@
+:root{
+        --default-nav-list-color: white;
+    }
+
+body{
+    margin: 0;
+    padding: 0;
+    border:  0;
+}
+li{
+    list-style: none;
+}
+a{
+    text-decoration:none;s
+}
+main{
+    margin: auto;
+}
+header{
+    margin: 0px;
+}
+footer{
+    margin-bottom:0px;
+}
 .header-background{
     background-color: black;
 }
@@ -5,15 +29,10 @@
     display: block;
     margin-left:auto;
     margin-right:auto;
-    width:50px;
-    height:50px;
+    width:900px;
+    height:80px;  
 }
-li{
-    list-style: none;
-}
-a{
-    text-decoration: none;
-}
+
 .news-card-list{
     display: flex;
     flex-wrap: wrap;   
@@ -21,3 +40,36 @@ a{
 .default-news-card{
     flex: 1 1 20ch;
 }
+.aside-class{
+    float:left;
+    margin-top: 0px;
+    margin-right: 40px;
+    margin-left:0px;
+    background-color: black ;
+}
+.side-bar{
+  padding:0;
+}
+.nav-list{
+    margin-top:50px;
+    margin-bottom:50px;
+    color: var(--default-nav-list-color);
+}
+.a-class{
+    color:var(--default-nav-list-color);
+    font-family: "Lucida Console", "Courier New", monospace;
+    margin-right: 40px;
+    margin-left: 15px;
+}
+.main-ul-footer{
+    display:flex;
+    flex-wrap: wrap;
+    margin-top: 200px;
+    background-color: black;
+    margin-bottom:0px;
+}
+.footer-sub-li{
+    color:var(--default-nav-list-color);
+    font-family: 'Courier New', monospace;
+}
+
