--- a/css/footer.css
+++ b/css/footer.css
@@ -7,7 +7,7 @@
     font-family: var(--default-font);
 }
 .footer-copyright{
-    width:100%;
+    max-width:100%;
     height:40px;
     background:#111;
     padding:10px;
@@ -25,4 +25,14 @@
 }
 .footer-body{
     margin-bottom:20px;
+}
+.footer_logo{
+    width:4%;height:4%}
+@media screen and (max-width:360px){
+    .footer_logo > img{width:25vw;
+    height:25vw;}
+    .short_links{
+        margin-left:0%;
+        margin-right:0%;
+    }
 }
