--- a/css/main_body.css
+++ b/css/main_body.css
@@ -52,6 +52,14 @@
     text-align: center;
 
 }
+.img_article{
+  width:400px;
+  height:210px;
+}
+.img_arc_main{
+  width:800px;
+  height:460px;
+}
 #links_div:hover{
     color:red;
 }
@@ -85,3 +93,22 @@
 .item-i:hover a#links_div{
   color:red;
 }
+@media screen and  (max-width:360px){
+  .container {
+    display:flex;
+    flex-wrap: wrap;
+    margin: 0%;
+  }
+  .item-a{width:100%}
+  .item-b{width:100%}
+  .item-c{width:100%}
+  .item-d{width:100%}
+  .item-e{width:100%}
+  .item-f{width:100%}  
+  .item-g{width:100%}
+  .item-h{width:100%}
+  .item-i{width:100%}
+  .img_article{width:300px;height:200px;}
+  .img_arc_main{width:300px;height:200px;}
+}
+
