--- a/css/news.css
+++ b/css/news.css
@@ -36,11 +36,20 @@
     margin-right:200px;
     
 }
-.max-width-100-height-auto{
+.news1_img{
     width: 70vw;
     height:40vw;
     display:block;
     margin-left:auto;
     margin-right:auto;
     text-align:center;
+}
+@media screen and (max-width:360px){
+    .news1_img{max-width:100vw;height:auto;}
+    .more-news{margin-left:3%;margin-right:3%;}
+    .main_p{font-size:5vw;}
+    .more_news_h2{font-size: 7vw;}
+    .more_news_h1{font-size: 7vw;}
+    .code_in_shell{font-size:3vw;}
+    .prompt_name{font-size:3vw;}
 }
